Fix bug where labels do not overflow

--- a/src/sass/defaults/_DefaultLinkWidget.scss
+++ b/src/sass/defaults/_DefaultLinkWidget.scss
@@ -22,6 +22,7 @@
 
   &__label {
     pointer-events: none;
+    overflow: visible !important;
 
     > div{
       display: inline-block;
